Disable `--sun-misc-unsafe-memory-access=allow`